@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27,py34,py35,pypy,py27-bare,flakes
+envlist=py26,{py27,py34}{,-keyfs_sqlite},py35,pypy,py27-bare,flakes
 #,gendeploy
 indexserver=
     pypi = https://pypi.python.org/simple
@@ -9,8 +9,8 @@ setenv =
     LANG = C
 
 changedir=test_devpi_server
-commands= py.test --slow -rfsxX {posargs}
-#install_command=pip install --pre {opts} {packages}
+commands=
+    py.test --slow -rfsxX {posargs}
 deps=
     py26: ordereddict
     webtest
@@ -26,6 +26,14 @@ deps =
     pytest
     pytest-capturelog
     beautifulsoup4
+
+[testenv:py27-keyfs_sqlite]
+commands=
+    py.test --backend=devpi_server.keyfs_sqlite --slow -rfsxX {posargs}
+
+[testenv:py34-keyfs_sqlite]
+commands=
+    py.test --backend=devpi_server.keyfs_sqlite --slow -rfsxX {posargs}
 
 [testenv:flakes]
 platform=linux
